--- a/nlv-app/src/home/styles/_home4b.scss
+++ b/nlv-app/src/home/styles/_home4b.scss
@@ -2,9 +2,10 @@
 
 
 .home-section4b-container{
+    margin-top: 10vh;
     width: 100vw;
     height: 100vh;
-    background-color: $color_background;
+    background-color:rgba($color: $color_orange, $alpha: 0.4);
     display: flex;
     align-items: center;
   
@@ -16,8 +17,8 @@ display: flex;
 flex-direction: column;
 align-items: center;
 justify-content: center;
-background-color: #FCE1EF;
-color:#EF5DA8;
+
+color:$color_orange;
 
 >.text-container{
     width: 80%;
@@ -39,7 +40,7 @@ color:#EF5DA8;
     }
     
     button{
-        background-color: #EF5DA8;
+        background-color: $color_orange;
         border: solid 2px;
         font-size: 1.5rem;
         font-weight: 400;
@@ -64,7 +65,7 @@ img{
 @media screen and (max-width: 678px) {
 
     .home-section4b-container{
-     
+        margin-top: 0vh;
         height: 100vh;
         display: flex;
         flex-direction: column;
@@ -72,7 +73,7 @@ img{
         align-items: center;
         padding-top: 5vh;
     
-        background-color: #FCE1EF;
+       
       
         
         .home-section4b-internal-container{
@@ -105,7 +106,7 @@ img{
             font-weight: 400;
         }
         button{
-            background-color: #EF5DA8;
+        
             border: solid 2px;
             font-size: 2rem;
             font-weight: 400;
