--- a/nlv-app/src/Plans/styles/_testResult.scss
+++ b/nlv-app/src/Plans/styles/_testResult.scss
@@ -86,6 +86,14 @@
             font-size: 4.5rem;
             color:$color_orange;
             font-weight: 600;
+            text-align: center;
+        }
+        h6{
+            margin-top: 2vh;
+            font-size: 2rem;
+            color:$color_orange;
+            font-weight: 600;
+            text-align: center;
         }
         >.bottom-container{
             border-top: solid 1px rgba($color: gray, $alpha: 0.5);
@@ -97,6 +105,9 @@
             text-decoration: underline;
             display: flex;
             justify-content: space-between;
+            >span{
+                cursor: pointer;
+            }
         }
     }
  
@@ -195,7 +206,7 @@
                 
             }
             h5{
-                font-size: 4.5rem;
+                font-size: 3.5rem;
                 color:$color_orange;
                 font-weight: 600;
             }
