--- a/nlv-app/src/ui/styles/_navbar.scss
+++ b/nlv-app/src/ui/styles/_navbar.scss
@@ -27,6 +27,7 @@ nav{
     
         .navbar-menu{
             font-size: 1.6rem;
+       
             display: flex;
             width: fit-content;
             margin-left: 10vh;
@@ -41,6 +42,16 @@ nav{
             a{
                 text-decoration: none;
                 color:$color_cyan;
+               
+               transition: 0.5s;
+            }
+            a:active{
+             
+                color:$color_orange
+            }
+            a:hover{
+             
+                transform: scale(1.05)
             }
         }
 
@@ -48,11 +59,16 @@ nav{
             position: relative;
 
             height:35%;
+            transition: 0.5s;
             svg{
                 path{
                     stroke:$color_cyan
                 }
+               
             }
+
+          
+
             strong{
                 position: absolute;
                 top: 0%;
@@ -70,6 +86,30 @@ nav{
             }
             
         }
+
+
+        >.icon-container:active{
+            svg{
+                path{
+                    stroke:$color_orange
+                }
+            }
+            strong{
+             
+                background-color: $color_orange;
+                
+                
+            }
+
+            
+        }
+
+        >.icon-container:hover{
+            transform: scale(1.05)
+
+            
+        }
+
     }
 
    
@@ -87,4 +127,11 @@ nav{
        
        
     }
+    .navbar-button:hover{
+        background-color: rgba($color: $color_purple, $alpha: 0.8)
+    }
+    .navbar-button:active{
+        background-color: $color_orange;
+    }
+    
 }
