--- a/src/Plans/styles/_plan.scss
+++ b/src/Plans/styles/_plan.scss
@@ -56,16 +56,18 @@
             height: 85%;
             display: flex;
             justify-content: space-between;
+            align-items: center;
 
             .plan-image-container{
                 width:40%;
-                height: 100%;
+                height: 90%;
                 display: flex;
                 align-items: start;
         
                 img{
                     object-fit: cover;
                     width: 100%;
+                    height: 100%;
                 
 
                 }
@@ -127,7 +129,7 @@
         .plan-container{
       
             height:fit-content;
-            padding-top: 10vh;
+            padding-top: 9vh;
          
             display: flex;
             justify-content: center;
@@ -186,13 +188,15 @@
         
                     .plan-image-container{
                         margin: 0 auto;
-                        width:60%;
                         aspect-ratio: 1;
+                        width:60%;
+                        height: auto;
                         display: flex;
                         align-items: start;
                         img{
                             object-fit: cover;
                             width: 100%;
+                            aspect-ratio: 1;
                         
         
                         }
