--- a/src/checkout/styles/_checkout.scss
+++ b/src/checkout/styles/_checkout.scss
@@ -9,6 +9,7 @@ flex-direction: column;
 align-items: center;
 justify-content: center;
 padding-top: 3%;
+overflow-x: hidden;
 
 h2{
     color:$color_text1;
@@ -209,10 +210,13 @@ h2{
             color:$color_text1;
             font-weight: 400;
             font-size: 1.2rem;
-            width: 100%;
-            padding-left: 2.5%;
-            margin-bottom: 0vh;
-           margin-left: 10%;
+            width: 80%;
+            padding-left: 0%;
+            margin: 0 auto;
+            margin-bottom: 2vh;
+            text-align: start;
+     
+      
         }
         }
 
