--- a/src/home/styles/_home1.scss
+++ b/src/home/styles/_home1.scss
@@ -49,7 +49,16 @@
         border-radius: 10px;
         color:$color_orange;
         border: solid 2px $color_background;
+        transition: 0.5s;
        
+    }
+    button:hover{
+      opacity: 0.8;
+      scale: 1.05;
+    }
+    button:active{
+      filter: brightness(1.1);
+     
     }
   }
 
@@ -87,7 +96,7 @@
 @media screen and (max-width: 678px) {
 
   .home-section1-container {
-    padding-top: 10vh;
+    padding-top: 9vh;
     width: 100vw;
     height: 100vh;
     display: flex;
