--- a/src/questonaryTest/styles/_questionaryTest.scss
+++ b/src/questonaryTest/styles/_questionaryTest.scss
@@ -60,7 +60,7 @@
 
    
         height: 100vh;
-        padding-top: 10vh;
+        padding-top: 8vh;
         row-gap: 5%;
         >h2{
             font-size: 3rem;
@@ -81,7 +81,8 @@
        
        .result-title{
         color:$color_cyan;
-        font-size: 6rem;
+        font-size: 5.5rem;
+        line-height: 7rem;
        }
        .result-secundaryTitle{
         color:$color_cyan;
