--- a/src/ui/styles/_shopingCart.scss
+++ b/src/ui/styles/_shopingCart.scss
@@ -264,9 +264,10 @@
       height: 35%;
       margin: 0 auto;
       display: flex;
+      align-items: end;
       background-color: $color_background;
       img {
-        height: 100%;
+        height: 80%;
         aspect-ratio: 1;
       }
     
